# yomu

./: .gitignore  README.md  issues.md  package.json  pnpm-lock.yaml  updates.md
docs/: issues.md  updates.md
src/: main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  protocol.rs  runtime.rs  watcher.rs
src-tauri/src/backup/: mod.rs  webdav.rs
src-tauri/src/commands/: backup.rs  books.rs  cache.rs  everything.rs  libraries.rs  mod.rs
src-tauri/src/db/: books.rs  libraries.rs  mod.rs  models.rs  schema.rs
src-tauri/src/protocol/: extract.rs  handler.rs  spine.rs
src-tauri/src/scanner/: hash.rs  image.rs  mod.rs  process.rs  rar.rs  sevenz.rs  types.rs
src-tauri/src/scanner/epub/: opf.rs  spine.rs
src/components/: BookCoverCard.tsx  HelpDialog.tsx
src/components/layout/: AppShell.tsx  Sidebar.tsx  TitleBar.tsx  WindowControls.tsx
src/components/reader/: ReaderDoublePageSpread.tsx  ReaderFlipView.tsx  ReaderOverlay.tsx  ReaderPageImage.tsx  ReaderToolbar.tsx  ReaderToolbarDropdown.tsx  ReaderViews.tsx  index.ts  types.ts  useReaderControls.ts
src/hooks/: usePreloader.ts
src/lib/: comic-url.ts  types.ts
src/pages/: BookDetailPage.tsx  LibraryPage.tsx  ReaderPage.tsx  SearchPage.tsx
src/routes/: __root.tsx  settings.backup.tsx  settings.display.tsx  settings.general.tsx  settings.library.tsx  settings.tsx
src/stores/: ambient.ts  settings.ts
src/styles/: globals.css
src/types/: page-flip.d.ts
