[package]
name = "yomu"
version = "0.1.0"
description = "A high-performance comic/manga reader"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "yomu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = "=2.5.6"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "=2.10.3", features = [] }
tauri-plugin-log = "=2.8.0"
tauri-plugin-dialog = "=2.7.0"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "=0.34.0", features = ["bundled"] }
zip = "2"
image = "0.25"
webp = "0.3"
sha2 = "0.10"
walkdir = "2"
natord = "1.0"
mobi = "0.8"
unrar = "0.5"
sevenz-rust = "0.6"
reqwest = { version = "=0.12.28", features = ["rustls-tls"], default-features = false }
